some responsive enhacements

--- a/src/main/webapp/components/meeting/edit.html
+++ b/src/main/webapp/components/meeting/edit.html
@@ -7,7 +7,7 @@
 	
 		<form>
 	
-			<div layout="row" layout-align="top center">
+			<div layout="row" layout-sm="column" layout-align="top center">
 				<div ng-show="!meeting.poll">
 					<div layout="row">
 						<md-input-group class="md-text-float-full-with md-default-theme">
