--- a/src/main/webapp/components/task/list.html
+++ b/src/main/webapp/components/task/list.html
@@ -34,7 +34,7 @@
 								<h3>{{task.title}}</h3>
 								<p>{{task.description}}</p>
 							</div>
-							<div class="md-tile-right last" ng-click="goto(task)" style="cursor: pointer;" layout="row" layout-align="center center">
+							<div class="md-tile-right last" ng-click="goto(task)" style="cursor: pointer;" hide-sm layout="row" layout-align="center center">
 								<div layout="row" style="text-align: center;">
 									<div layout="column" layout-align="center center" class="list-item-box list-item-box-right task-detail-box" style="width:50px; ">
 										<div ng-show="task.priority">
