--- a/src/main/webapp/components/activity/list.html
+++ b/src/main/webapp/components/activity/list.html
@@ -6,40 +6,45 @@
 	<p class="empty-list-message text-muted">No activity yet for this project</p>
 </div>
 
-<md-whiteframe class="md-whiteframe-z1" layout layout-align="center center" ng-repeat="activity in activityList.items" ng-if="activityList.$resolved && activityList.items.length>0">
-	<md-content flex>
-		<section>
-			<md-list layout="column"> 
-				<md-item class="md-item-padded"> 
-					<md-item-content>
-						<div class="md-tile-left first">
-							<div class="list-item-box list-item-box-left" layout="column" layout-align="center center" style="min-width:120px;">
-								<span ng-switch on="activity.activityType">
-									<md-icon ng-switch-when="TaskActivityEvent" icon="/img/icons/ic_view_list_48px.svg"></md-icon>
-									<md-icon ng-switch-when="ProjectActivityEvent" icon="/img/icons/ic_info_outline_48px.svg"></md-icon>
-									<md-icon ng-switch-when="MeetingActivityEvent" icon="/img/icons/ic_event_48px.svg"></md-icon>
-									<md-icon ng-switch-when="MemberActivityEvent" icon="/img/icons/ic_group_48px.svg"></md-icon>
-									<md-icon ng-switch-default icon="/img/icons/ic_info_outline_48px.svg"></md-icon>
-								</span>
-								{{activity.verb}}
+<section ng-repeat="(groupValue,activityGroupedList) in activityList.items | groupBy:'timestampGroup'" ng-if="activityList.$resolved && activityList.items.length>0">
+	<md-subheader md-theme="transparent" ng-show="activityGroupedList.length>0">
+		{{groupValue}}
+	</md-subheader>
+	<md-whiteframe class="md-whiteframe-z1" layout layout-align="center center" ng-repeat="activity in activityGroupedList">
+		<md-content flex>
+			<section>
+				<md-list layout="column"> 
+					<md-item class="md-item-padded"> 
+						<md-item-content>
+							<div class="md-tile-left first">
+								<div class="list-item-box list-item-box-left" layout="column" layout-align="center center" style="min-width:120px;">
+									<span ng-switch on="activity.activityType">
+										<md-icon ng-switch-when="TaskActivityEvent" icon="/img/icons/ic_view_list_48px.svg"></md-icon>
+										<md-icon ng-switch-when="ProjectActivityEvent" icon="/img/icons/ic_info_outline_48px.svg"></md-icon>
+										<md-icon ng-switch-when="MeetingActivityEvent" icon="/img/icons/ic_event_48px.svg"></md-icon>
+										<md-icon ng-switch-when="MemberActivityEvent" icon="/img/icons/ic_group_48px.svg"></md-icon>
+										<md-icon ng-switch-default icon="/img/icons/ic_info_outline_48px.svg"></md-icon>
+									</span>
+									{{activity.verb}}
+								</div>
 							</div>
-						</div>
-						<div class="md-tile-content" ng-include="'/components/activity/item-'+activity.activityType+'.html'" flex>
-							
-						</div>
-						<div class="md-tile-right last" layout="row" layout-align="center center">
-							<div class="list-item-box list-item-box-right" layout="row" layout-align="center center" style="text-align: center;">
-								<small>{{activity.timestamp|date:'shortDate'}}<br/><small>{{activity.timestamp|date:'shortTime'}}</small></small>
+							<div class="md-tile-content" ng-include="'/components/activity/item-'+activity.activityType+'.html'" flex>
+								
 							</div>
-							<div class="list-item-box list-item-box-right" layout="column" layout-align="center center">
-								<img class="face" src="about:blank" ng-src="{{activity.actor.iconUrl ? activity.actor.iconUrl : '/img/face.png'}}"/>
-								<small>{{activity.actor.firstName}}</small>
+							<div class="md-tile-right last" layout="row" layout-align="center center">
+								<div class="list-item-box list-item-box-right" layout="row" layout-align="center center" style="text-align: center;">
+									<small>{{activity.timestamp|date:'shortDate'}}<br/><small>{{activity.timestamp|date:'shortTime'}}</small></small>
+								</div>
+								<div class="list-item-box list-item-box-right" layout="column" layout-align="center center">
+									<img class="face" src="about:blank" ng-src="{{activity.actor.iconUrl ? activity.actor.iconUrl : '/img/face.png'}}"/>
+									<small>{{activity.actor.firstName}}</small>
+								</div>
 							</div>
-						</div>
-					
-					</md-item-content>
-				</md-item>
-			</md-list>
-		</section>
-	</md-content>
-</md-whiteframe>
+						
+						</md-item-content>
+					</md-item>
+				</md-list>
+			</section>
+		</md-content>
+	</md-whiteframe>
+</section>
