--- a/src/main/webapp/components/activity/list.html
+++ b/src/main/webapp/components/activity/list.html
@@ -1,7 +1,3 @@
-<div layout layout-align="center center" class="spinner-container" ng-if="!activityList.$resolved">
-	<md-progress-circular md-mode="indeterminate" ></md-progress-circular>
-</div>
-
 <div ng-if="activityList.$resolved && (!activityList.items || activityList.items.length==0)">
 	<p class="empty-list-message text-muted">No activity yet for this project</p>
 </div>
@@ -48,3 +44,12 @@
 		</md-content>
 	</md-whiteframe>
 </section>
+
+<div layout layout-align="center center" class="spinner-container" ng-if="!activityList.$resolved || loadingMore">
+	<md-progress-circular md-mode="indeterminate" ></md-progress-circular>
+</div>
+
+<div layout layout-align="center center" class="md-content-padded" ng-if="!loadingMore && !loadMoreEndReached && activityList.$resolved && activityList.items.length>0">
+		<md-button ng-click="loadMore()">Load more</md-button>
+	</div>
+</div>
