priority slider baloon fix

--- a/src/main/webapp/components/task/edit.html
+++ b/src/main/webapp/components/task/edit.html
@@ -46,7 +46,7 @@
 					</md-input-group>
 				</div>
 				<div class="full-with" flex>
-					<div style="overflow:hidden;">
+					<div style="overflow:hidden; padding:0 10px;">
 						<md-input-group class="md-input-has-value">
 							<label for="">Priority</label>
 							<md-slider md-discrete ng-model="task.priority" step="1" min="0" max="4" aria-label="Priority" style="width: 100% ;"></md-slider>
