--- a/src/main/webapp/components/user/add-modal.html
+++ b/src/main/webapp/components/user/add-modal.html
@@ -1,4 +1,4 @@
-<md-dialog aria-label="Add a user">	
+<md-dialog aria-label="Add a user" class="modal-with-typeahead">
 	<md-content>
 		<h2>Add a user</h2>
 		<p>
