--- a/src/main/webapp/components/meeting/list.html
+++ b/src/main/webapp/components/meeting/list.html
@@ -91,7 +91,7 @@
 							</div>
 							<div class="md-tile-right last" style="text-align:center; min-width:150px">
 								<md-button class="md-button-padded" ng-href="{{getHangoutLink(meeting)}}" target="_blank" data-ng-show="meeting.start && !meeting.past" style="color:inherit">
-									<md-icon icon="/img/icons/ic_hangout_24px.svg"></md-icon> Hangout&nbsp;
+									<md-icon icon="/img/icons/ic_hangout_24px.svg"></md-icon> <span hide-sm>Hangout&nbsp;</span>
 								</md-button>
 							</div>
 						</md-item-content>
