--- a/src/main/webapp/components/meeting/list.css
+++ b/src/main/webapp/components/meeting/list.css
@@ -15,8 +15,17 @@
 	
 	display: inline-block;
 	padding: 5px;
+	margin:0 5px;
 }
 
 .proposed-date.preferred {
 	border: 1px dashed #4caf50;
+}
+
+.proposed-date-time {
+	font-size: 14px;
+}
+
+.proposed-date-vote-buttons {
+	min-width: 60px;
 }
