--- a/src/main/webapp/WEB-INF/templates/base.html.vm
+++ b/src/main/webapp/WEB-INF/templates/base.html.vm
@@ -4,6 +4,18 @@
 	    <title></title>
 	</head>
 	<body>
+		<script type="application/ld+json">
+		{
+		  "@context": "http://schema.org",
+		  "@type": "EmailMessage",
+		  "action": {
+		    "@type": "ViewAction",
+		    "url": "$actionUrl",
+		    "name": "$actionLabel"
+		  },
+		  "description": "$actionLabel"
+		}
+		</script>
 	    <div>
 	        <div style="width:100%;padding:24px 0 16px 0;background-color:#f5f5f5;text-align:center">
 	            <div style="display:inline-block;width:90%;max-width:680px;min-width:280px;text-align:left;font-family:Roboto,Arial,Helvetica,sans-serif">
