--- a/src/main/webapp/components/project/list.html
+++ b/src/main/webapp/components/project/list.html
@@ -40,7 +40,7 @@
 							<md-item-content>
 								<div class="md-tile-content first" style="text-align:left;" layout="row" layout-align="center center" flex>
 									<md-checkbox ng-model="task.completed" aria-label="Completed" ng-change="saveTaskAsync(task)" ng-click="$event.stopPropagation()" style="margin:4px;"></md-checkbox>
-									<span flex>{{task.title}}</<span>
+									<span flex>{{task.title}}</span>
 								</div>
 								<div class="md-tile-right last" style="cursor: pointer;" layout="row" layout-align="center center">
 									<span class="text-muted text-small">
