--- a/src/main/webapp/components/project/list-fab.html
+++ b/src/main/webapp/components/project/list-fab.html
@@ -1,6 +1,6 @@
 <span ng-controller='projectListFabController'>
 	<md-button class="md-fab md-fab-bottom-right md-primary" md-theme="red" ng-click="fabAdd($event)">
-		<md-icon icon="/img/icons/ic_add_24px.svg"></md-icon>
+		<i class="md-add"></i>
 		<md-tooltip>Create new Project</md-tooltip>
 	</md-button>
 </span>
