--- a/src/main/webapp/components/user/list.html
+++ b/src/main/webapp/components/user/list.html
@@ -19,7 +19,7 @@
 					</div>
 					<div class="md-tile-right last">
 						<md-button ng-if="entity.id != currentUser.id" ng-click="removeMember(entity)">
-						 	<md-icon icon="/img/icons/ic_cancel_24px.svg"></md-icon>
+						 	<i class="md-cancel"></i>
 						 	<md-tooltip>Remove this user</md-tooltip>
 						 </md-button>
 					</div>
