--- a/src/main/webapp/components/project/list.html
+++ b/src/main/webapp/components/project/list.html
@@ -19,15 +19,15 @@
 						<div layout="row" style="text-align: center;">
 							<div layout="column" class="list-item-box list-item-box-right" style="min-width:50px; text-align: left;">
 								<div layout="row" layout-align="center center">
-									<span><md-icon icon="/img/icons/ic_view_list_24px.svg"></md-icon>&nbsp;</span>
+									<span><i class="md-view-list"></i>&nbsp;</span>
 									<span flex>{{entity.tasksCount}}</span>
 								</div>
 								<div layout="row" layout-align="center center">
-									<span><md-icon icon="/img/icons/ic_event_24px.svg"></md-icon>&nbsp;</span>
+									<span><i class="md-event"></i>&nbsp;</span>
 									<span flex>{{entity.meetingsCount}}</span>
 								</div>
 								<div layout="row" layout-align="center center">
-									<span><md-icon icon="/img/icons/ic_group_24px.svg"></md-icon>&nbsp;</span>
+									<span><i class="md-group"></i>&nbsp;</span>
 									<span flex>{{entity.usersCount}}</span>
 								</div>
 							</div>
