--- a/src/main/webapp/components/task/list-fab.html
+++ b/src/main/webapp/components/task/list-fab.html
@@ -1,6 +1,6 @@
 <span>
 	<md-button class="md-fab md-fab-bottom-right md-primary" md-theme="red" ng-href="/#/project/{{routeParams.projectId}}/task">
-		<md-icon icon="/img/icons/ic_add_24px.svg"></md-icon>
+		<i class="md-add"></i>
 		<md-tooltip>Add new Task</md-tooltip>
 	</md-button>
 </span>
