mdi icon prefix fix

--- a/src/main/webapp/components/file/list-fab.html
+++ b/src/main/webapp/components/file/list-fab.html
@@ -21,7 +21,7 @@
 	</div>
 	<div>
 		<md-button class="md-fab md-primary" md-theme="red" ng-click="fabAdd()">
-			<i class="md-add"></i>
+			<i class="mdi-add"></i>
 			<md-tooltip>Add new File</md-tooltip>
 		</md-button>
 	</div>
