--- a/src/main/webapp/components/meeting/list-fab.html
+++ b/src/main/webapp/components/meeting/list-fab.html
@@ -1,6 +1,6 @@
 <span>
 	<md-button class="md-fab md-fab-bottom-right md-primary" md-theme="red" ng-href="/#/project/{{routeParams.projectId}}/meeting">
-		<i class="md-add"></i>
+		<i class="mdi-add"></i>
 		<md-tooltip>Add new Meeting</md-tooltip>
 	</md-button>
 </span>
