--- a/src/main/webapp/components/sidebar/menu.html
+++ b/src/main/webapp/components/sidebar/menu.html
@@ -1,29 +1,29 @@
 <a ng-href="/#/project/{{routeParams.projectId}}/tasks" class="menu-item" route-active="['task-list','task-edit']" ng-click="closeSidebar()" md-ink-ripple>
-	<i class="md-view-list"></i>
+	<i class="mdi-view-list"></i>
 	<span>Tasks</span>
 </a>
 
 <a ng-href="/#/project/{{routeParams.projectId}}/files" class="menu-item" route-active="'file-list'" ng-click="closeSidebar()" md-ink-ripple>
-	<i class="md-folder-shared"></i>
+	<i class="mdi-folder-shared"></i>
 	<span>Files</span>
 </a>
 
 <a ng-href="/#/project/{{routeParams.projectId}}/meetings" class="menu-item" route-active="['meeting-list','meeting-edit']" ng-click="closeSidebar()" md-ink-ripple>
-	<i class="md-event"></i>
+	<i class="mdi-event"></i>
 	<span>Meetings</span>
 </a>
 
 <a ng-href="/#/project/{{routeParams.projectId}}/discussions" class="menu-item" route-active="'discussions'" ng-click="closeSidebar()" md-ink-ripple>
-	<i class="md-forum"></i>
+	<i class="mdi-forum"></i>
 	<span>Discussions</span>
 </a>
 
 <a ng-href="/#/project/{{routeParams.projectId}}/members" class="menu-item" route-active="'member-list'" ng-click="closeSidebar()" md-ink-ripple>
-	<i class="md-group"></i>
+	<i class="mdi-group"></i>
 	<span>Members</span>
 </a>
 
 <a ng-href="/#/project/{{routeParams.projectId}}/activity" class="menu-item" route-active="'activity'" ng-click="closeSidebar()" md-ink-ripple>
-	<i class="md-flash-on"></i>
+	<i class="mdi-flash-on"></i>
 	<span>Activity</span>
 </a>
