--- a/src/main/webapp/components/activity/list.html
+++ b/src/main/webapp/components/activity/list.html
@@ -15,10 +15,10 @@
 							<div class="md-tile-left first">
 								<div class="list-item-box list-item-box-left" layout="column" layout-align="center center" style="min-width:120px;">
 									<span ng-switch on="activity.activityType">
-										<i ng-switch-when="TaskActivityEvent" class="mdi-view-list"></i>
-										<i ng-switch-when="ProjectActivityEvent" class="mdi-content-paste"></i>
-										<i ng-switch-when="MeetingActivityEvent" class="mdi-event"></i>
-										<i ng-switch-when="MemberActivityEvent" class="mdi-group"></i>
+										<i ng-switch-when="TaskActivityEvent" class="mdi-view-list mdi-2x"></i>
+										<i ng-switch-when="ProjectActivityEvent" class="mdi-content-paste mdi-2x"></i>
+										<i ng-switch-when="MeetingActivityEvent" class="mdi-event mdi-2x"></i>
+										<i ng-switch-when="MemberActivityEvent" class="mdi-group mdi-2x"></i>
 										<i ng-switch-default class="md-info-outline"></i>
 									</span>
 									{{activity.verb}}
