--- a/src/main/webapp/components/meeting/list.html
+++ b/src/main/webapp/components/meeting/list.html
@@ -94,7 +94,7 @@
 							</div>
 							<div class="md-tile-right last" style="text-align:center; min-width:150px">
 								<md-button class="md-button-padded" ng-href="{{getHangoutLink(meeting)}}" target="_blank" data-ng-show="meeting.start && !meeting.past" style="color:inherit">
-									<i class="mdi-call-made"></i> <span hide-sm>Hangout&nbsp;</span>
+									<span hide-sm>Hangout</span> <i class="mdi-call-made mdi-lg"></i>
 								</md-button>
 							</div>
 						</md-item-content>
