--- a/src/main/webapp/components/user/list-fab.html
+++ b/src/main/webapp/components/user/list-fab.html
@@ -1,6 +1,6 @@
 <span ng-controller='userListFabController'>
 	<md-button class="md-fab md-primary md-fab-bottom-right" md-theme="red" ng-click="fabAdd($event)">
-		<i class="mdi-add"></i>
+		<i class="mdi-add mdi-lg"></i>
 		<md-tooltip>Add user</md-tooltip>
 	</md-button>
 </span>
