--- a/src/main/webapp/components/project/list.html
+++ b/src/main/webapp/components/project/list.html
@@ -17,7 +17,7 @@
 					</div>
 					<div class="md-tile-right last" layout="row" layout-align="center center" hide-sm>
 						<div layout="row" style="text-align: center;">
-							<div layout="column" class="list-item-box list-item-box-right" style="min-width:50px; text-align: left;">
+							<div layout="column" class="list-item-box list-item-box-right" style="min-width:50px; text-align: left; line-height: 30px">
 								<div layout="row" layout-align="center center">
 									<span><i class="mdi-view-list mdi-lg"></i>&nbsp;</span>
 									<span flex>{{entity.tasksCount}}</span>
