--- a/src/main/webapp/components/project/edit-modal.html
+++ b/src/main/webapp/components/project/edit-modal.html
@@ -20,7 +20,7 @@
 				<md-progress-circular md-mode="indeterminate"></md-progress-circular>
 			</div>
 			<div layout="row"  layout-align="center center" flex>
-				<span>Creating project<br><b>{{project.name}}</b><br>...</span>
+				<span>Creating project<br><b>{{project.name}}</b></span>
 			</div>
 		</div>
 	
