--- a/src/main/webapp/components/project/list.html
+++ b/src/main/webapp/components/project/list.html
@@ -12,7 +12,7 @@
 		<md-whiteframe flex="33" class="md-whiteframe-z1 tile" layout="column" layout-align="center center" ng-repeat="entity in entityList.items">
 			<md-content class="md-content-padded">
 				<section layout="row" flex style="cursor: pointer; margin-bottom:12px;" ng-click="goto(entity)">
-					<div class="md-tile-left first" layout="column" layout-align="le center" flex>
+					<div class="md-tile-left first" layout="column" layout-align="center center" flex>
 						<h2 style="text-align: left; margin-bottom: 5px;">{{entity.name}}</h2>
 						<small style="text-align: left;">{{entity.description}}</small>
 					</div>
