--- a/src/main/webapp/components/project/list.html
+++ b/src/main/webapp/components/project/list.html
@@ -13,8 +13,8 @@
 			<md-content class="md-content-padded">
 				<section layout="row" flex style="cursor: pointer; margin-bottom:12px;" ng-click="goto(entity)">
 					<div class="md-tile-left first" layout="column" layout-align="center center" flex>
-						<h2 style="text-align: left; margin-bottom: 5px;">{{entity.name}}</h2>
-						<small style="text-align: left;">{{entity.description}}</small>
+						<h2 style="margin-bottom: 5px;">{{entity.name}}</h2>
+						<small>{{entity.description}}</small>
 					</div>
 					<div class="md-tile-right last" layout="row" layout-align="center center" hide-sm>
 						<div layout="row" style="text-align: center;">
