--- a/src/main/webapp/components/file/list-fab.html
+++ b/src/main/webapp/components/file/list-fab.html
@@ -2,19 +2,19 @@
 	<div class="fab-container-small-fabs">
 		<div>
 			<md-button class="md-fab md-button-fab-small md-primary" md-theme="green" ng-click="fabCreate('application/vnd.google-apps.spreadsheet')">
-				<md-icon icon="/img/sheets-logo-white.svg"></md-icon>
+				<img src="/img/sheets-logo-white.png"/>
 				<!-- <md-tooltip>new Sheet</md-tooltip> -->
 			</md-button>
 		</div>
 		<div>
 			<md-button class="md-fab md-button-fab-small md-primary" md-theme="yellow" ng-click="fabCreate('application/vnd.google-apps.presentation')">
-				<md-icon icon="/img/presentation-logo-white.svg"></md-icon>
+				<img src="/img/presentation-logo-white.png"/>
 				<!-- <md-tooltip>new Slide</md-tooltip> -->
 			</md-button>
 		</div>
 		<div>
 			<md-button class="md-fab md-button-fab-small md-primary" md-theme="blue" ng-click="fabCreate('application/vnd.google-apps.document')">
-				<md-icon icon="/img/docs-logo-white.svg"></md-icon>
+				<img src="/img/docs-logo-white.png"/>
 				<!-- <md-tooltip>new Doc</md-tooltip> -->
 			</md-button>
 		</div>
