--- a/src/main/webapp/components/meeting/list.html
+++ b/src/main/webapp/components/meeting/list.html
@@ -15,7 +15,7 @@
 					<md-item class="md-item-padded meeting-item">
 						<md-item-content>
 							<div class="md-tile-left first" style="text-align:center; min-width:120px" hide-sm>
-								<i class="mdi-help mdi-lg"></i>
+								<i class="mdi-help mdi-2x"></i>
 								<p class="text-muted" ng-show="meeting.poll.preferredDate" style="line-height: 15px;">
 									{{meeting.poll.preferredDate.start|date:'dd'}}<br>
 									{{meeting.poll.preferredDate.start|date:'MMMM'}}<br>
